--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,53 +1,54 @@
-<div class="section no-pad-bot" id="index-banner">
+<div class="content">
+    <div class="section no-pad-bot" id="index-banner">
+        <div class="container">
+            <br><br>
+            <h1 class="header center primary-text">Magistex</h1>
+            <div class="row center">
+                <h5 class="header col s12 light white-text">Een verbeterde Magister applicatie met material design.</h5>
+            </div>
+            <div class="row center">
+                <a href="/login" id="download-button" class="btn-large waves-effect waves-light primary">Log nu in</a>
+            </div>
+            <br><br>
+
+        </div>
+    </div>
+
     <div class="container">
+        <div class="section">
+
+            <!--   Icon Section   -->
+            <div class="row white-text">
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center primary-text"><i class="material-icons">flash_on</i></h2>
+                        <h5 class="center">Supersnelle agenda</h5>
+
+                        <p class="light center-align">Nooit meer te laat komen bij je les.</p>
+                    </div>
+                </div>
+
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center primary-text"><i class="material-icons">group</i></h2>
+                        <h5 class="center">Helemaal top</h5>
+
+                        <p class="light center-align">Klik maar gewoon op login, dit is nog beta. Het word vast snel beter. <br>Lorem
+                            ipsum <br>Dolor sit amet <br>Kangaroe</p>
+                    </div>
+                </div>
+
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center primary-text"><i class="material-icons">settings</i></h2>
+                        <h5 class="center">Slim design</h5>
+
+                        <p class="light center-align">Deze site ziet er niet alleen mooi uit, maar hij is ook heel mooi</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
         <br><br>
-        <h1 class="header center blue-text">Magistex</h1>
-        <div class="row center">
-            <h5 class="header col s12 light">Een verbeterde magister applicatie met material design.</h5>
-        </div>
-        <div class="row center">
-            <a href="/login" id="download-button" class="btn-large waves-effect waves-light teal">Log nu in</a>
-        </div>
-        <br><br>
-
     </div>
-</div>
-
-
-<div class="container">
-    <div class="section">
-
-        <!--   Icon Section   -->
-        <div class="row">
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
-                    <h5 class="center">Supersnelle agenda</h5>
-
-                    <p class="light">Nooit meer te laat komen bij je les omdat dit veel sneller laad dan magister.</p>
-                </div>
-            </div>
-
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-                    <h5 class="center">Helemaal top</h5>
-
-                    <p class="light">Klik maar gewoon op login, dit is nog beta. Het word vast snel beter. <br>Lorem
-                        ipsum <br>Dolor sit amet <br>Kangaroe</p>
-                </div>
-            </div>
-
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-                    <h5 class="center">Slim design</h5>
-
-                    <p class="light">Deze site ziet er niet alleen mooi uit, maar hij is ook heel mooi</p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-    <br><br>
 </div>
