--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/main.css' />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
-    <nav class="light-blue lighten-1" role="navigation">
+    <nav class="primary" role="navigation">
       <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Magistex</a>
         <ul class="right hide-on-med-and-down">
           <li><a href="/login">Login</a></li>
@@ -21,7 +21,7 @@
     </nav>
     {{{body}}}
     
-    <footer class="page-footer teal">
+    <footer class="page-footer grey darken-4">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
@@ -53,7 +53,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container">
-          Gemaakt door <a class="teal-text text-lighten-3" href="https://samtaen.nl">Sam Taen</a>
+          Gemaakt door <a class="text-lighten-3 white-text" href="https://samtaen.nl">Sam Taen</a> & <a class="white-text" href="https://g-vm.nl">Guus van Meerveld</a>
         </div>
       </div>
     </footer>
