--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,32 +1,26 @@
-<center style="margin-top: 10vh;">
-    <div class="container">
-        <div class="z-depth-1 grey lighten-4 row"
-            style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
-            <form class="col s12" method="post">
-                {{!-- <div class='row'>
-                    <div class='col s12'>
-                    </div>
-                </div> --}}
-                {{error}}
-                <div class='row'>
-                    <div class='input-field col s12'>
-                        <input class='validate' type='text' id='user'>
-                        <label for='user'>Gebruikersnaam</label>
-                    </div>
+<link rel="stylesheet" href="/stylesheets/login.css">
+<div class="container center-content content">
+    <div class="z-depth-1 grey darken-4 row login">
+        <form class="col s12" method="post">
+            {{error}}
+            <div class='row'>
+                <div class='input-field'>
+                    <input class='validate white-text' type='text' id='user'>
+                    <label for='user'>Gebruikersnaam</label>
                 </div>
-                <div class='row'>
-                    <div class='input-field col s12'>
-                        <input class='validate' type='password' name='password' id='password' />
-                        <label for='password'>Enter your password</label>
-                    </div>
+            </div>
+            <div class='row'>
+                <div class='input-field'>
+                    <input class='validate white-text' type='password' name='password' id='password' />
+                    <label for='password'>Wachtwoord</label>
                 </div>
-                <br>
-                <center>
-                    <div class='row'>
-                        <button type='submit' class='col s12 btn btn-large waves-effect indigo'>Login</button>
-                    </div>
-                </center>
-            </form>
-        </div>
+            </div>
+            <br>
+            <center>
+                <div class='row'>
+                    <button type='submit' class='btn btn-large waves-effect primary'>Login</button>
+                </div>
+            </center>
+        </form>
     </div>
-</center>
+</div>
