--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,5 @@
+{{#extend "layout"}}
+{{#content "body"}}
 <link rel="stylesheet" href="/stylesheets/login.css">
 <div class="container center-content content">
     <div class="z-depth-1 grey darken-4 row login">
@@ -24,3 +26,5 @@
         </form>
     </div>
 </div>
+{{/content}}
+{{/extend}}
