--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-{{#extend "layout"}}
+{{#extend "layout" title="Magistex Magister client"}}
 {{#content "body"}}
 <div class="content">
     <div class="section no-pad-bot" id="index-banner">
