--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/main.css' />
+    <link rel='stylesheet' href='/css/main.css' />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    {{#block "head"}}
+    {{/block}}
   </head>
   <body>
     <nav class="primary" role="navigation">
@@ -63,5 +65,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="/js/allPages.js"></script>
-  <script src="/js/login.js"></script>
+  {{#block "scripts"}}
+  {{/block}}
 </html>
