--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,7 +1,7 @@
-{{#extend "layout"}}
+{{#extend "layout" title="Agenda - Magistex"}}
 {{#content "body"}}
 <div class="content">
-    Succesvol ingelogd!
+    Succesvol ingelogd!!!
 </div>
 {{/content}}
 {{/extend}}
