Inloggen werkt beter

--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,4 +1,7 @@
 {{#extend "layout" title="Agenda - Magistex"}}
+{{#content "scripts"}}
+<script src="/js/main.js"></script>
+{{/content}}
 {{#content "body"}}
 <div class="content">
     Succesvol ingelogd!!!
