--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
 @import "src/materialize";
-@import "src/notfound";
+// @import "src/notfound";
 
 .icon-block {
     padding: 0 15px;
@@ -15,7 +15,9 @@
     // pointer-events: none;
 }
 
-.page {
-    // Is even tijdelijk
-    height: calc(100vh - 64px);
+footer {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
 }
